# tomlconfig

./: README.md  pyproject.toml  requirements.txt
tomlconfig/: __init__.py
