[project]
name = "tomlconfig"
description = "Parse TOML config file into a dataclass like object"
version = "1.1.0"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "tomli >= 2; python_version < '3.11'",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tomlconfig"]
